--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function googleTranslateElementInit() {
 		<div class="w3l_search">
 			<form action="#" method="post">
 				<input type="text" name="Product" value="Search a product..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search a product...';}" required="">
-				<input type="submit" value=" ">
+				<input type="submit" value=" Next ">
 			</form>
 		</div>
 		<div class="product_list_header">  
