--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function googleTranslateElementInit() {
 <!-- header -->
 	<div class="agileits_header">
 		<div class="w3l_offers">
-			<a href="">FARM VISION</a>
+			<a href="">FARM VISION hey there!</a>
 		</div>
 		<div class="w3l_search">
 			<form action="#" method="post">
